--- a/crm/templates/crm/layout/base.html
+++ b/crm/templates/crm/layout/base.html
@@ -100,7 +100,7 @@
 
           <li class="nav-item">
             <a href="#" class="nav-link {% block statistics %}{% endblock %}">
-              <i class="fas fa-chart-pie" style="width: 23px"></i>
+              <i class="fa fa-chart-line" style="width: 23px"></i>
               <p style="color: #494949; font-size: 14px; font-weight: 600">
                 Статистика
               </p>
@@ -274,7 +274,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h4 class="m-0">Статистика</h4>
+            <h4 class="m-0">{% block name_page %}Статистика{% endblock %}</h4>
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
