--- a/personal_cabinet/templates/personal_cabinet/layout/base.html
+++ b/personal_cabinet/templates/personal_cabinet/layout/base.html
@@ -60,13 +60,13 @@
       <!-- User profile Dropdown Menu -->
       <li class="dropdown user user-menu">
             <a href="#" data-toggle="dropdown" aria-expanded="false">
-                <span class="nav-link" style="font-size: 15px"><i class="fa fa-user-circle text-purple" style="padding: 0 5px 0 0"></i>Тестовый пользователь</span>
+                <span class="nav-link" style="font-size: 15px"><img src="{{ user.avatar.url }}" class="img-circle" height="25" style="margin-right: 7px; margin-bottom: 3px">{{ user.first_name }} {{ user.last_name }}</span>
             </a>
             <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header" style="background-color: #f39c12">
-                    <img src="{% static 'crm/dist/img/user2-160x160.jpg' %}" class="img-circle">
-                    <p>Тестовый пользователь</p>
+                    <img src="{{ user.avatar.url }}" class="img-circle">
+                    <p>{{ user.first_name }} {{ user.last_name }}</p>
                 </li>
                 <!-- Menu Footer-->
                 <li class="user-footer">
@@ -74,7 +74,7 @@
                         <a class="btn btn-default" href="#">Профиль</a>
                     </div>
                     <div style="display: inline-block; float: right">
-                        <a class="btn btn-default" href="#" data-method="post">Выход</a>
+                        <a class="btn btn-default" href="{% url 'logout' %}" data-method="post">Выход</a>
                     </div>
                 </li>
             </ul>
