--- a/users/templates/users/pages/login/admin_login.html
+++ b/users/templates/users/pages/login/admin_login.html
@@ -11,6 +11,13 @@
   <link rel="stylesheet" href="{% static 'crm/plugins/fontawesome-free/css/all.min.css' %}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'crm/dist/css/adminlte.min.css' %}">
+  <style>
+      input.error {
+          border: red 1px solid;
+          position: relative;
+          box-shadow: 0 0 4px 0 firebrick;
+      }
+  </style>
 </head>
 <body class="login-page" style="min-height: 496.781px; margin-top: -70px">
     <div class="login-box">
@@ -21,7 +28,6 @@
         </div>
 
         <div class="card">
-            {% block tab %}
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="">
               <li class="nav-item" role="presentation" style="width: 50%; text-align: center">
                 <a style="color: #494949; font-size: 15px" class="nav-link" href="{% url 'owner_login' %}" role="tab" aria-controls="home" aria-selected="false">Для жильцa</a>
@@ -30,15 +36,17 @@
                 <a style="color: #494949; font-size: 15px" class="nav-link active" id="profile-tab" data-toggle="tab" href="{% url 'admin_login' %}" role="tab" aria-controls="profile" aria-selected="true">Для администрации</a>
               </li>
             </ul>
-            {% endblock %}
             <div class="card-body login-card-body">
                 <p style="text-align: center; padding-top: 10px; padding-bottom: 10px; font-size: 14px">{% block login %}Вход в панель управления{% endblock %}</p>
-                <form method="post">
+                {% if form.errors %}
+                    <p style="font-size: 15px; color: #9d1e15">* Логин или пароль не корректны</p>
+                {% endif %}
+                <form method="post" id="form">
                     {% csrf_token %}
                     <div class="input-group mb-3">
-                        <input type="email" name="username" class="form-control" autocapitalize="none" autocomplete="username" maxlength="254" required="" id="id_username" placeholder="Email {% block id %}{% endblock %}">
+                        <input type="email" name="username" class="form-control" autocapitalize="none" autocomplete="username" maxlength="254" required="" id="id_username" placeholder="Email">
                         <div class="input-group-append">
-                            <div class="input-group-text">
+                            <div class="input-group-text error">
                                 <span class="fas fa-envelope"></span>
                             </div>
                         </div>
@@ -46,13 +54,13 @@
                     <div class="input-group mb-3">
                         <input type="password" name="password" class="form-control" required="" id="id_password" placeholder="Пароль">
                         <div class="input-group-append">
-                            <div class="input-group-text">
+                            <div class="input-group-text error">
                                 <span class="fas fa-lock"></span>
                             </div>
                         </div>
                     </div>
                     <div class="icheck-primary" style="padding-top: 15px">
-                        <input type="checkbox" name="remember_me" required="" id="id_remember_me">
+                        <input type="checkbox" name="remember_me" id="id_remember_me" checked>
                         <label for="id_remember_me">Запомнить меня</label>
                     </div>
                     <div style="padding-top: 10px">
@@ -66,8 +74,6 @@
     </div>
 
 
-
-
 <!-- REQUIRED SCRIPTS -->
 
 <!-- jQuery -->
@@ -76,5 +82,32 @@
 <script src="{% static 'crm/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'crm/dist/js/adminlte.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+<script>
+    $("#form").validate({
+      rules: {
+        username: {
+          required: true,
+          email: true
+        },
+        password: "required",
+        remember_me: {
+            required: false
+        },
+      },
+      messages: {
+        password: "* Обязательное поле",
+        username: {
+          required: "* Обязательное поле",
+          email: "* Адрес электронной почты некорректен"
+        }
+      },
+      wrapper: 'span',
+      errorPlacement: function (error, element) {
+          error.css({'text-align': 'left', 'font-size': '14px', 'color': 'red', 'width': '100%'});
+          error.insertBefore(element);
+      }
+    });
+</script>
 </body>
 </html>
