--- a/users/templates/users/pages/login/admin_login.html
+++ b/users/templates/users/pages/login/admin_login.html
@@ -63,6 +63,7 @@
                         <input type="checkbox" name="remember_me" id="id_remember_me" checked>
                         <label for="id_remember_me">Запомнить меня</label>
                     </div>
+                    <input type="hidden" name="g-recaptcha-response" id='recaptcha'>
                     <div style="padding-top: 10px">
                         <button type="submit" class="btn btn-primary btn-block">Вход</button>
                         <input type="hidden" name="next" value="{{ next }}">
@@ -83,7 +84,19 @@
 <!-- AdminLTE App -->
 <script src="{% static 'crm/dist/js/adminlte.min.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+<script src="https://www.google.com/recaptcha/api.js?render={{ site_key }}"></script>
 <script>
+    grecaptcha.ready(function() {
+      $('#form').submit(function(e){
+          var form = this;
+          grecaptcha.execute('reCAPTCHA_site_key', {action: 'form'}).then(function(token) {
+              $('#recaptcha').val(token)
+              form.submit()
+          });
+      })
+    });
+
+
     $("#form").validate({
       rules: {
         username: {
@@ -93,7 +106,7 @@
         password: "required",
         remember_me: {
             required: false
-        },
+        }
       },
       messages: {
         password: "* Обязательное поле",
