--- a/crm/templates/crm/layout/base.html
+++ b/crm/templates/crm/layout/base.html
@@ -9,18 +9,14 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="{% static 'crm/plugins/fontawesome-free/css/all.min.css' %}">
+  <link rel="stylesheet" href="{% static 'crm/bootstrap5dist/css/bootstrap.min.css' %}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'crm/dist/css/adminlte.min.css' %}">
-  {% block style %}{% endblock %}
+  <link rel="stylesheet" href="{% static 'crm/styles/base.css' %}">
   <style>
-      .active-link {
-          background-color: #e1f1ea;
-      }
-      .black {
-          color: black;
-          font-weight: 600;
-      }
+
   </style>
+  {% block style %}{% endblock %}
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -89,7 +85,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-light-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link" style="text-align: -webkit-center;  padding: 8px 0 8px 0">
+    <a href="{% url 'home' %}" class="brand-link" style="text-align: -webkit-center;  padding: 8px 0 8px 0">
       <img src="{% static 'crm/dist/img/logo.svg' %}" width="100%" height="40">
     </a>
 
@@ -101,7 +97,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
           <li class="nav-item">
-            <a href="#" class="nav-link {% block statistics %}{% endblock %}">
+            <a href="{% url 'home' %}" class="nav-link" {% block statistics %}{% endblock %}>
               <i class="fa fa-chart-line" style="width: 23px"></i>
               <p style="color: #494949; font-size: 14px; font-weight: 600">
                 Статистика
@@ -237,15 +233,15 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'roles' %}" class="nav-link {% block role %}{% endblock %}">
+                <a href="{% url 'roles' %}" {% block role %}class="nav-link"{% endblock %}>
                   <i class="fa fa-user nav-icon"></i>
                   <p style="font-size: 14px" {% block role-active %}{% endblock %}>Роли</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link {% block users %}{% endblock %}">
+                <a href="{% url 'users_list' %}" {% block users %}class="nav-link"{% endblock %}>
                   <i class="fa fa-user-plus nav-icon"></i>
-                  <p style="font-size: 14px">Пользователи</p>
+                  <p style="font-size: 14px" {% block users-active %}{% endblock %}>Пользователи</p>
                 </a>
               </li>
               <li class="nav-item">
@@ -272,7 +268,7 @@
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper" style="background-color: #ecf0f5">
     <!-- Content Header (Page header) -->
-    <div class="content-header">
+    <div class="content-header" style="padding-bottom: 7px">
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
@@ -280,7 +276,7 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item" style="font-size: 14px"><a href="{% url 'home' %}" style="color: #494949"><i class="fa fa-home" style="padding-right: 3px"></i>Главная</a></li>
+              <li class="breadcrumb-item" style="font-size: 14px"><a href="{% url 'home' %}" style="color: #494949"><i class="fa fa-home" style="padding-right: 3px"></i>Главная </a>{% block previos_link %}{% endblock %}</li>
               <li class="breadcrumb-item active" style="font-size: 14px">{% block nav %}Статистика{% endblock %}</li>
             </ol>
           </div><!-- /.col -->
