--- a/users/templates/users/pages/login/owner_login.html
+++ b/users/templates/users/pages/login/owner_login.html
@@ -33,7 +33,7 @@
                 <a style="color: #494949; font-size: 15px" class="nav-link active" id="home-tab" data-toggle="tab" href="{% url 'owner_login' %}" role="tab" aria-controls="home" aria-selected="true">Для жильцa</a>
               </li>
               <li class="nav-item" role="presentation" style="width: 50%; text-align: center">
-                <a style="color: #494949; font-size: 15px" class="nav-link" href="{% url 'admin_login' %}" role="tab" aria-controls="profile" aria-selected="false">Для администрации</a>
+                <a style="color: #494949; font-size: 15px" class="nav-link" href="{% if user.is_authenticated and user.is_staff %}{% url 'home' %}{% else %}{% url 'admin_login' %}{% endif %}" role="tab" aria-controls="profile" aria-selected="false">Для администрации</a>
               </li>
             </ul>
             <div class="tab-content" id="myTabContent">
