last version of the project (develop users pages)

--- a/crm/templates/crm/pages/system_settings/users/users_list.html
+++ b/crm/templates/crm/pages/system_settings/users/users_list.html
@@ -19,15 +19,15 @@
         <div style="float: right; padding-right: 10px; padding-top: 5px; margin-bottom: 5px">
             <a href="{% url 'users_list' %}" class="btn btn-default" style="font-size: 14px; max-height: 34px">Очистить</a>
         </div>
-        <table class="table table-hover table-striped table-responsive no-padding" style="color: #333333; font-size: 14px">
+        <table class="table table-hover table-striped table-responsive no-padding" style="color: #333333; font-size: 14px; padding-bottom: 10px">
             <thead>
                 <tr>
                     <th style="width: 3%">#</th>
-                    <th style="width: 17%">Пользователь</th>
-                    <th style="width: 8%">Роль</th>
-                    <th style="width: 17%">Телефон</th>
-                    <th style="width: 17%">E-mail(логин)</th>
-                    <th style="width: 7%">Статус</th>
+                    <th style="width: 17%; min-width: 200px">Пользователь</th>
+                    <th style="width: 8%; min-width: 120px">Роль</th>
+                    <th style="width: 17%; min-width: 150px">Телефон</th>
+                    <th style="width: 17%; min-width: 200px">E-mail(логин)</th>
+                    <th style="width: 7%; min-width: 120px">Статус</th>
                     <th style="width: 0%"></th>
                 </tr>
             </thead>
