--- a/crm/templates/crm/layout/base.html
+++ b/crm/templates/crm/layout/base.html
@@ -58,12 +58,12 @@
       <!-- User profile Dropdown Menu -->
       <li class="dropdown user user-menu">
             <a href="#" data-toggle="dropdown" aria-expanded="false">
-                <span class="nav-link" style="font-size: 15px"><img src="{{ user.avatar.url }}" class="img-circle" height="25" style="padding-right: 9px; margin-bottom: 4px">{{ user.first_name }} {{ user.last_name }}</span>
+                <span class="nav-link" style="font-size: 15px"><img src="{% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'crm/dist/img/user2-160x160.jpg' %}{% endif %}" class="img-circle" height="25" style="padding-right: 9px; margin-bottom: 4px">{{ user.first_name }} {{ user.last_name }}</span>
             </a>
             <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header" style="background-color: #f39c12">
-                    <img src="{{ user.avatar.url }}" class="img-circle">
+                    <img src="{% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'crm/dist/img/user2-160x160.jpg' %}{% endif %}" class="img-circle">
                     <p>{{ user.first_name }} {{ user.last_name }} (Роль)</p>
                 </li>
                 <!-- Menu Footer-->
@@ -306,6 +306,7 @@
 
 <!-- jQuery -->
 <script src="{% static 'crm/plugins/jquery/jquery.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="{% static 'crm/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <!-- AdminLTE App -->
