--- a/personal_cabinet/templates/personal_cabinet/layout/base.html
+++ b/personal_cabinet/templates/personal_cabinet/layout/base.html
@@ -60,12 +60,12 @@
       <!-- User profile Dropdown Menu -->
       <li class="dropdown user user-menu">
             <a href="#" data-toggle="dropdown" aria-expanded="false">
-                <span class="nav-link" style="font-size: 15px"><img src="{{ user.avatar.url }}" class="img-circle" height="25" style="margin-right: 7px; margin-bottom: 3px">{{ user.first_name }} {{ user.last_name }}</span>
+                <span class="nav-link" style="font-size: 15px"><img src="{% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'crm/dist/img/user2-160x160.jpg' %}{% endif %}" class="img-circle" height="25" style="margin-right: 7px; margin-bottom: 3px">{{ user.first_name }} {{ user.last_name }}</span>
             </a>
             <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header" style="background-color: #f39c12">
-                    <img src="{{ user.avatar.url }}" class="img-circle">
+                    <img src="{% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'crm/dist/img/user2-160x160.jpg' %}{% endif %}" class="img-circle">
                     <p>{{ user.first_name }} {{ user.last_name }}</p>
                 </li>
                 <!-- Menu Footer-->
